--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "date-fns": "^4.1.0",
         "framer-motion": "^12.23.26",
         "globals": "^15.14.0",
         "input-otp": "^1.4.2",
